<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">移动审批</string>
  	<string name="copyrigth">网上审批系统 &#169;2012 武汉楚鼎信息技术有限公司</string>
	
	<string name="GENERAL_WARNING">提示</string>
	<string name="GENERAL_CONFIRM">确定</string>
	<string name="GENERAL_REFRESH">刷新</string>
	<string name="GENERAL_BACK">返回</string>
	<string name="GENERAL_CANCEL">取消</string>
	<string name="GENERAL_TIP">提示</string>
	<string name="GENERAL_CONFIRM_BACK">您确定返回吗?</string>
	<string name="GENERAL_CONFIRM_EXIT">您确定退出吗?</string>
	<string name="GENERAL_CAMERA">拍照</string>
	<string name="GENERAL_NEXT">下一步</string>
	<string name="GENERAL_PRD">产品</string>
	<string name="GENERAL_SAVE">保存</string>
	<string name="GENERAL_SEND">发送</string>
	<string name="GENERAL_EXIT">退出</string>
	<string name="GENERAL_SET">设置</string>
	
	<string name="GENERAL_CANNOT_USE">此版本暂不支持该功能</string>
	<string name="GENERAL_PROCESS">解析</string>
	<string name="GENERAL_DATA_SAVE_SUCCESS">数据已保存</string>
	<string name="GENERAL_DATA_SAVE_FAIL">数据保存失败,请检查必填项或文本格式后重试</string>
	<string name="GENERAL_SEND_BUG_MESSAGE">上一次程序未正常退出,是否发送错误报告</string>
	<string name="GENERAL_SEND_BUG_TITLE">发送错误报告</string>
	<string name="GENERAL_FC">抱歉!SFA 出了点小状况:</string>
	<string name="GENERAL_DEFAULT">恢复默认</string>
	<string name="GENERAL_HINT_REMARK">填写备注</string>
	<string name="GENERAL_ADDRESS">地址</string>
	<string name="GENERAL_HINT_SEARCH">输入查询</string>
	
	<string name="GENERAL_NET_PROCESS">正在连接网络...</string>
	
	<string name="GENERAL_UPLOAD">上传</string>
	<string name="GENERAL_DELETE">删除</string>
	<string name="GENERAL_IGNORE">忽略</string>
	
	<string name="GENERAL_MSG_UPLOAD">亲!您采集的数据还未上传到服务器</string>
	<string name="GENERAL_MSG_DELETED">删除成功</string>
	<string name="GENERAL_MSG_UPLOAD_SUCCESS">上传成功</string>
	<string name="GENERAL_MSG_UPLOAD_FAIL">上传失败</string>
	<string name="GENERAL_MSG_NO_DATA_UPLOAD">无数据上传</string>
	<string name="GENERAL_EMPTY">无查询结果</string>
	
	<string name="GENERAL_USERNAME">账号</string>
	<string name="GENERAL_PASSWORD">密码</string>
	<string name="GENERAL_LOGIN">登录</string>
	<string name="GENERAL_SAVELOGIN">记住密码</string>
	<string name="GENERAL_LOGIN_ERROR">用户名或密码错误</string>
	
	<string name="TASK_WAITING">待办任务</string>
	<string name="TASK_FNINSH">已办任务</string>
	<string name="TASK_DETAIL">任务详细</string>
	<string name="TASK_FLAG_WAITING">待办</string>
	<string name="TASK_FLAG_FNINSH">已办</string>
	<string name="TASK_RISK">风险</string>
	
	<string name="TASK_INFO">任务信息</string>
	<string name="TASK_COMMENT">评审意见</string>
	<string name="TASK_RECORD">处理记录</string>
	<string name="TASK_PROJECT">工程信息</string>
	<string name="TASK_PRICE_TYPE">记价方式</string>
	<string name="TASK_INTENDER_PAY">招标付款</string>
	<string name="TASK_INTENDER_DAY">招标工期</string>
	<string name="TASK_INTENDER_QUALITY">招标质量</string>
	<string name="TASK_INTENDER_SAFE">招标安全</string>
	
	<string name="TASK_RECORD_ZB">总部</string>
	<string name="TASK_RECORD_BSC">办事处</string>
	<string name="TASK_RECORD_GS">公司</string>
	<string name="TASK_RECORD_FGS">分公司</string>
	
	<string name="TASK_SEND">流程转交</string>
	<string name="TASK_SUBMIT">提交</string>
	
	<string name="BACK_RUN">程序启动</string>
	
	<string-array name="SERVICE_INTERVAL">
		<item>3分钟</item>
		<item>30分钟</item>
		<item>1小时</item>
	</string-array>
	<integer-array name="SERVICE_INTERVAL_I">
		<item>180000</item>
		<item>1800000</item>
		<item>3600000</item>
	</integer-array>
	<string name="ENABLE_PUSH">开启推送</string>
	<string name="DISABLE_PUSH">关闭推送</string>
	
	<string name="ENABLE_PUSH_MSG">推送已开启</string>
	<string name="DISABLE_PUSH_MSG">推送已关闭</string>
	
	<string name="HINT_LOGINAME">请输入用户名</string>
	<string name="HINT_PASSWORD">请输入密码</string>
</resources>
