<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg_2" >
    <LinearLayout
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@drawable/login_top">
	    <ImageView
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center_horizontal"
	        android:src="@drawable/login_logo"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
	     android:layout_height="fill_parent"
	     android:layout_weight="1">
	    <TableLayout
	        android:id="@+id/middle_id"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" 
	        android:layout_margin="10dp"
	        
	        android:background="@drawable/login_middle"
	        android:padding="10dp">
			<TableRow android:layout_marginTop="5dp" android:padding="3dp" android:background="@drawable/selector_text_input">
				<TextView  style="@style/TextView.Label" android:text="@string/GENERAL_USERNAME"/>
				<EditText  android:id="@+id/edit_loginame" 
					style="@style/Input_Edit"
					android:background="@android:color/transparent"  
					android:layout_weight="1" />
			</TableRow>
			<TableRow android:layout_marginTop="5dp" android:padding="3dp" android:background="@drawable/selector_text_input">
				<TextView  style="@style/TextView.Label" android:text="@string/GENERAL_PASSWORD"/>
				<EditText android:id="@+id/edit_password"
					style="@style/Input_Edit" 
					android:password="true"
					android:background="@android:color/transparent"
					android:layout_weight="1"  />
			</TableRow>
			<TableRow android:layout_marginTop="10dp">
				<LinearLayout android:layout_span="2" android:layout_weight="1" android:gravity="left" >
				<CheckBox android:id="@+id/cb_save"
						style="@style/CheckBox"  
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
						android:layout_marginLeft="5dp"
				android:text="@string/GENERAL_SAVELOGIN"/>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingTop="5dp" android:visibility="gone">
				<LinearLayout android:layout_span="2" android:layout_weight="1"  android:gravity="right">
					<TextView 
						android:id="@+id/txt_chang"
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content"
					/>
					<TextView 
					 android:id="@+id/txt_setup"
					 android:layout_marginLeft="5dp"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"/>
				</LinearLayout>
			</TableRow>
	       <TableRow android:paddingTop="15dp" >
	       	<LinearLayout android:layout_span="2" android:layout_weight="1"  android:gravity="right">
			<Button
	            android:id="@+id/btn_login"
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
	            android:layout_gravity="right"
	            android:text="@string/GENERAL_LOGIN"/>
	           </LinearLayout>
	       </TableRow>
	    </TableLayout>
    </LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:orientation="vertical"> 
	     <TextView 
	     	android:text="@string/copyrigth" 
	     	android:gravity="right"
	     	android:singleLine="true"
	     	android:ellipsize="marquee"
	     	android:focusableInTouchMode="true"
	     	android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	     <QuickContactBadge android:id="@+id/quickContactBadge1" android:layout_width="wrap_content" android:layout_height="wrap_content"></QuickContactBadge>
	</LinearLayout>
</LinearLayout>